Minor changes to test everything is working within the Vscode

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Status Display Website</title>
 </head>
 <body>
-    <h1>Website under construction</h1>
+    <h1>Website under maintenance</h1>
 
 <script src="app.js"> </script>
 </body>
