--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Status Display Website</title>
 </head>
 <body>
+    <nav>
+        <a href="#"> Home </a>
+        <a href="#">About</a>
+    </nav>
     <h1>Website under maintenance</h1>
 
 <script src="app.js"> </script>
